Updated to mongoose 4.x. Updated controllers to use mongodb for storage.
